# component-graph

./: ComponentTree.h  ComponentTree.hxx  FlatSE.h  FlatSE.hxx  Image.h  Image.hxx  ImageIO.hxx  Morphology.h  ProjectHome.md  README.md  Types.h  cgraph.cpp  cgraph.h  cgraphdemo.cpp  cgraphdemo.pro  colorordering.h  main_nifti.cpp  main_segments.cpp  ragraph.hxx  segments.py  shaping.hxx  tuple.h  utils.cpp
GUI/: cgraph.pro  core.cpp  corefilter.cpp  dialogNoise.h  dialogimpulsenoise.h  maindisplay.cpp  mainwindow.h  mainwindow.ui  moc_corefilter.cpp  moc_dialogNoise.cpp  moc_mainwindow.cpp  ui_dialogNoise.h  ui_dialogimpulsenoise.h  ui_mainwindow.h
Images/: 253027.ppm  299086.ppm  baboon_256.ppm  result.ppm  test2.ppm  test3.ppm
InteractiveColorFiltering/: Image.h  Image.hxx  OrderedQueue.h  README.md  cgraph.h  cgraph.pro  cgraphdemo.cpp  colorordering.cpp  corefilter.h  dialogNoise.cpp  dialogNoise.ui  dialogimpulsenoise.cpp  dialogimpulsenoise.ui  main.cpp  maindisplay.h  noise.h  ragraph.cpp  ragraph.h
ShapingFiltering/: CMakeLists.txt  ComponentTree.h  FlatSE.cpp  Image.hxx  ImageIterators.h  Point.h  README.md  Types.h  cgraph.h  cgraph.hxx  cgraphwatcher.cpp  cgraphwatcher.h  filters.hxx  main.cpp  ordering.h  ragraph.h  shaping.h  shaping.hxx  tupleordering_4.h  utils.h
trunk/: ComponentTree.hxx  FlatSE.h  Morphology.hxx  cgraph.cpp  cgraph.h  cgraphdemo.cpp  cgraphdemo.pro  main.cpp  ragraph.cpp
trunk/GUI/: Makefile  cgraph.pro  core.h  corefilter.cpp  corefilter.h  mainwindow.cpp  moc_dialogimpulsenoise.cpp  moc_mainwindow.cpp  noise.cpp  (+3 more)
(+5 files in other folders)
